--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "vercel-build": "npx prisma generate",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register ./tests/*$NAME*.{test,spec}.ts -t 10000 --exit"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +20,18 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/mocha": "9.1.0",
     "@types/node": "^20.11.8",
-    "typescript": "^4.9.5",
+    "@types/validator": "13.6.6",
+    "@types/chai": "4.3.0",
+    "@types/chai-http": "4.2.0",
+    "chai": "4.3.6",
+    "chai-http": "4.3.0",
+    "mocha": "9.2.1",
+    "nodemon": "^2.0.20",
     "prisma": "^5.0.0",
-    "nodemon": "^2.0.20"
+    "supertest": "^6.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   }
 }
