--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vercel-build": "npx prisma generate",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
-    "test": "mocha -r ts-node/register ./tests/*$NAME*.{test,spec}.ts -t 10000 --exit"
+    "test": "nyc mocha -r ts-node/register ./tests/*$NAME*.{test,spec}.ts -t 10000 --exit",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "keywords": [],
   "author": "",
@@ -19,16 +20,18 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/chai": "4.3.0",
+    "@types/chai-http": "4.2.0",
     "@types/express": "^4.17.21",
     "@types/mocha": "9.1.0",
     "@types/node": "^20.11.8",
     "@types/validator": "13.6.6",
-    "@types/chai": "4.3.0",
-    "@types/chai-http": "4.2.0",
     "chai": "4.3.6",
     "chai-http": "4.3.0",
+    "codecov": "^3.8.3",
     "mocha": "9.2.1",
     "nodemon": "^2.0.20",
+    "nyc": "^15.1.0",
     "prisma": "^5.0.0",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
