--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/mocha": "9.1.0",
     "@types/node": "^20.11.8",
+    "@types/sinon": "^17.0.3",
     "@types/validator": "13.6.6",
     "chai": "4.3.6",
     "chai-http": "4.3.0",
@@ -33,6 +34,7 @@
     "nodemon": "^2.0.20",
     "nyc": "^15.1.0",
     "prisma": "^5.0.0",
+    "sinon": "^17.0.1",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
